# main

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
business_processes/: apps.py  constants.py  forms.py  models.py  urls.py  views.py
business_processes/api/: serializers.py  urls.py  viewset.py
business_processes/migrations/: 0001_initial.py  0002_businessprocess_title_alter_businessprocess_status.py  0003_alter_businessprocess_table_businessprocesstobe.py  0004_rename_businessprocess_businessprocessasis_and_more.py  0005_rename_business_process_businessprocesstobe_business_process_as_is.py  0006_businessprocesstobe_status_and_more.py  0007_alter_businessprocesstobe_status.py
business_processes/services/: change_status_buttons.py
common_users/: admin.py  apps.py  constants.py  managers.py  models.py  urls.py  views.py
common_users/migrations/: 0001_initial.py  0002_alter_commonuser_user_type.py  0003_commonuser_parent.py  0004_notice.py
context_processors/template/: base.py
core/: http.py  renderers.py
core/auth/: mixins.py
core/forms/: base.py
core/models/: base.py  model_fields.py
core/utils/: convert.py  handlers.py  translate_name.py
flowchart/: asgi.py  settings.py  urls.py  wsgi.py
services/: send_notify.py
static/codebase/: diagramWithEditor.js
static/common/: data.js
static/css/: bootstrap.css  components.css  style.css
static/js/core/: app.js  (+1 more)
templates/auth/: login.html
templates/email/: base.html
templates/layouts/: app.html  header.html
templates/pages/: home_page.html
(+8 files in other folders)
